--- a/src/assets/styles/cmps/_app-footer.scss
+++ b/src/assets/styles/cmps/_app-footer.scss
@@ -18,9 +18,8 @@ footer {
                 flex-direction: column;
                 align-items: center;
 
-                & nav {
+                & .main-nav {
                     display: flex;
-                    gap: 25px;
 
                     & a:hover {
                         cursor: pointer;
