--- a/src/assets/styles/cmps/_side-navbar.scss
+++ b/src/assets/styles/cmps/_side-navbar.scss
@@ -64,16 +64,16 @@
                 }
             }
 
-            & nav {
+            & .main-nav-and-contact {
                 padding-block: $padding-block-side-navbar;
                 padding-inline-start: 23px;
 
-                & .nav-list > * {
+                & .main-nav .nav-list > * {
                     &:not(:first-child) {
                         margin-block-start: 24px;
                     }
 
-                    &:hover {
+                    & a:hover {
                         cursor: pointer;
                         color: $main-orange-clr0;
                     }
