--- a/src/assets/styles/cmps/about/_meet-directors.scss
+++ b/src/assets/styles/cmps/about/_meet-directors.scss
@@ -85,7 +85,7 @@
                         @include clean-btn;
                         background-color: $main-orange-clr0;
                         padding: 20px;
-                        border-radius: 50%;
+                        border-radius: $border-radius-circle;
                         transition:
                             background-color 0.2s ease-out,
                             transform 0.2s ease;
