--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -133,14 +133,14 @@
     height: $size;
     width: $size;
     border: 2px solid $main-teal-clr5;
-    border-radius: 50%;
+    border-radius: $border-radius-circle;
     overflow: hidden;
     margin-inline: auto;
 }
 
 @mixin nav-share($size: $size-pic-icon-share-small) {
     display: flex;
-    gap: 16px;
+    gap: $gap-0;
 
     & a {
         width: $size;
@@ -182,11 +182,13 @@
         }
     }
 
-    border: 2px solid $before-hover-clr;
-    border-radius: 24px;
-    padding-block: $padding-block-btn-contact-us;
-    transition: all 0.2s ease-in-out;
     width: fit-content;
+    border: 2px solid $before-hover-clr;
+    border-radius: $border-radius-0;
+    padding-block: $padding-block-btn-contact-us;
+    transition:
+        color 0.2s ease-in-out,
+        background-color 0.2s ease-in-out;
 
     & p {
         text-align: center;
